feat: melhoria no main e adicionado funcionario para os logs