@@ -2,10 +2,10 @@ package org.example;
 
 import org.example.Enum.Campanha;
 import org.example.Enum.Prioridade;
+import org.example.entities.Funcionario;
 import org.example.entities.LaboratorioFachada;
-import org.example.entities.exame.ExameColonoscopia;
-import org.example.entities.exame.ExameEndoscopiaDigestivaAlta;
-import org.example.entities.exame.ExameSangue;
+import org.example.entities.abstracts.ExameProcedimento;
+import org.example.entities.exame.*;
 import org.example.entities.laudo.LaudoPdf;
 import org.example.entities.models.ExameOrdem;
 import org.example.entities.models.Medico;
@@ -15,45 +15,77 @@ import java.util.*;
 
 public class Main {
     public static void main(String[] args) throws Exception {
-        // Cadastro de paciente e médicos
-        System.out.println("----------------- Cadastrando pacientes -----------------");
-        Paciente paciente = new Paciente("Maria", 65, "999999999", "itallo.oliver21@gmail.com", "Unimed", "F");
-        Medico medicoSolicitante = new Medico("João", "12345", "Clínico Geral");
-        Medico medicoResponsavel = new Medico("Ana", "54321", "Endoscopia");
 
-        // Instanciar fachada e exames
+        // Funcionário "Logado" para registrar os logs
+        Funcionario.setNome("Alex");
+
+        System.out.println("----------------- Cadastrando pacientes -----------------");
+
+        Paciente paciente1 = new Paciente("Itallo Oliveira Ferreira", 20, "988887777", "itallo.oliveira@academico.ifpb.edu.br", null, "M");
+        Paciente paciente2 = new Paciente("João Paulo Azevedo Baia", 21, "977776666", "joao.baia@academico.ifpb.edu.br", "Unimed", "F");
+        Paciente paciente3 = new Paciente("Lauro Sthephan", 23, "966665555", "lauro.stephan@academico.ifpb.edu.br", null, "M");
+        Paciente paciente4 = new Paciente("Fernando Júlio", 71, "955554444", "fernando.julio@academico.ifpb.edu.br", "NotreDame Intermédica", "F");
+        Paciente paciente5 = new Paciente("Marcos Oliveira", 53, "944443333", "marcos.oliveira@email.com", "Hapvida", "M");
+        Medico medicoSolicitante = new Medico("João Pedro", "12345", "Clínico Geral");
+        Medico medicoResponsavel = new Medico("Ana Karla", "54321", "Endoscopia");
+        Medico medicoSolicitante2 = new Medico("Carlos Mendes", "67890", "Gastroenterologia");
+        Medico medicoResponsavel2 = new Medico("Beatriz Rocha", "09876", "Endoscopia Digestiva");
+
         System.out.println("----------------- Instanciando fachadas -----------------");
         LaboratorioFachada lab = new LaboratorioFachada();
-        ExameColonoscopia exame1 = new ExameColonoscopia();
-        ExameEndoscopiaDigestivaAlta exame2 = new ExameEndoscopiaDigestivaAlta();
-        ExameSangue exame3 = new ExameSangue();
-        org.example.entities.exame.ExameRaioX exame4 = new org.example.entities.exame.ExameRaioX();
-        org.example.entities.exame.ExameRessonanciaMagnetica exame5 = new org.example.entities.exame.ExameRessonanciaMagnetica();
+        ExameProcedimento exame1 = new ExameColonoscopia();
+        ExameProcedimento exame2 = new ExameEndoscopiaDigestivaAlta();
+        ExameProcedimento exame3 = new ExameSangue();
+        ExameProcedimento exame4 = new ExameRaioX();
+        ExameProcedimento exame5 = new ExameRessonanciaMagnetica();
+        ExameProcedimento exame6 = new ExameRaioX();
 
-        // Requisitar exames
         System.out.println("----------------- Requisitando exames -----------------");
-        ExameOrdem ordem1 = lab.requisitarExame(paciente, medicoSolicitante, medicoResponsavel, exame1,
+        ExameOrdem ordem1 = lab.requisitarExame(paciente1, medicoSolicitante, medicoResponsavel, exame1,
                 Prioridade.URGENTE);
-        ExameOrdem ordem2 = lab.requisitarExame(paciente, medicoSolicitante, medicoResponsavel, exame2,
+        ExameOrdem ordem2 = lab.requisitarExame(paciente2, medicoSolicitante2, medicoResponsavel2, exame2,
                 Prioridade.POUCO_URGENTE);
-        ExameOrdem ordem3 = lab.requisitarExame(paciente, medicoSolicitante, medicoResponsavel, exame3,
+        ExameOrdem ordem3 = lab.requisitarExame(paciente3, medicoSolicitante2, medicoResponsavel, exame3,
                 Prioridade.ROTINA);
-        ExameOrdem ordem4 = lab.requisitarExame(paciente, medicoSolicitante, medicoResponsavel, exame4,
+        ExameOrdem ordem4 = lab.requisitarExame(paciente4, medicoSolicitante, medicoResponsavel2, exame4,
                 Prioridade.URGENTE);
-        ExameOrdem ordem5 = lab.requisitarExame(paciente, medicoSolicitante, medicoResponsavel, exame5,
+        ExameOrdem ordem5 = lab.requisitarExame(paciente5, medicoSolicitante2, medicoResponsavel, exame5,
+                Prioridade.POUCO_URGENTE);
+        ExameOrdem ordem6 = lab.requisitarExame(paciente5, medicoSolicitante, medicoResponsavel2, exame6,
                 Prioridade.POUCO_URGENTE);
 
-        List<ExameOrdem> exames = Arrays.asList(ordem1, ordem2, ordem3, ordem4, ordem5);
 
-        // Calcular preço com descontos (idoso, convênio, campanha)
+        List<ExameOrdem> examesItallo = Collections.singletonList(ordem1);
+        List<ExameOrdem> examesPaulo = Collections.singletonList(ordem2);
+        List<ExameOrdem> examesLauro = Collections.singletonList(ordem3);
+        List<ExameOrdem> examesFernando = Collections.singletonList(ordem4);
+        List<ExameOrdem> examesMarcos = Arrays.asList(ordem5, ordem6);
+
+
         System.out.println("----------------- Calculando preço do exames -----------------");
-        List<Campanha> campanhas = Arrays.asList(Campanha.NOVEMBRO_AZUL);
-        double precoTotal = lab.calcularPreco(exames, paciente, campanhas);
-        System.out.println("Preço total com descontos: R$ " + precoTotal);
+        List<Campanha> campanhasAtivas = List.of(Campanha.NOVEMBRO_AZUL);
 
-        // Pagar exames
+        double precoTotalexamesItallo = lab.calcularPreco(examesItallo, paciente1, campanhasAtivas);
+        System.out.println("Preço total com descontos exames Itallo: R$ " + precoTotalexamesItallo);
+
+        double precoTotalexamesPaulo = lab.calcularPreco(examesPaulo, paciente2, campanhasAtivas);
+        System.out.println("Preço total com descontos exames Paulo: R$ " + precoTotalexamesPaulo);
+
+        double precoTotalexamesLauro = lab.calcularPreco(examesLauro, paciente3, campanhasAtivas);
+        System.out.println("Preço total com descontos exames Lauro: R$ " + precoTotalexamesLauro);
+
+        double precoTotalexamesFernando = lab.calcularPreco(examesFernando, paciente4, campanhasAtivas);
+        System.out.println("Preço total com descontos exames Fernando: R$ " + precoTotalexamesFernando);
+
+        double precoTotalexamesMarcos = lab.calcularPreco(examesMarcos, paciente5, campanhasAtivas);
+        System.out.println("Preço total com descontos exames Marcos: R$ " + precoTotalexamesMarcos);
+
         System.out.println("----------------- Pagando exames -----------------");
-        lab.pagarExames(exames, paciente, campanhas);
+        lab.pagarExames(examesItallo, paciente1, campanhasAtivas);
+        lab.pagarExames(examesPaulo, paciente2, campanhasAtivas);
+        lab.pagarExames(examesLauro, paciente3, campanhasAtivas);
+        lab.pagarExames(examesFernando, paciente4, campanhasAtivas);
+        lab.pagarExames(examesMarcos, paciente5, campanhasAtivas);
 
         // Entrar na fila de prioridade
         lab.entrarNaFilaDeEspera(ordem1);
@@ -61,32 +93,30 @@ public class Main {
         lab.entrarNaFilaDeEspera(ordem3);
         lab.entrarNaFilaDeEspera(ordem4);
         lab.entrarNaFilaDeEspera(ordem5);
+        lab.entrarNaFilaDeEspera(ordem6);
+
 
         // Chamar e realizar exames
-        for (int i = 0; i < exames.size(); i++) {
-            System.out.println("----------------- Iniciando exame -----------------" + " " + i);
+        while(lab.hasProximo()) {
+            System.out.println("----------------- Iniciando exame -----------------");
             ExameOrdem proximo = lab.chamarProximoDaFila();
             lab.realizarExame(proximo);
 
-            // Preencher dados do exame baseado no tipo
             Map<String, String> dados = new HashMap<>();
             
             // Dados básicos para todos os exames
             dados.put("tipoExame", proximo.getExameTipo().getClass().getSimpleName());
             dados.put("medicoSolicitante", medicoSolicitante.getNome());
             dados.put("medicoResponsavel", medicoResponsavel.getNome());
-            
-            // Dados específicos por tipo de exame - APENAS campos validados
+
             if (proximo.getExameTipo() instanceof ExameColonoscopia) {
                 // Campos obrigatórios validados: descricao, endoscopista
-                // Campos opcionais validados: preparoIntestinal (será preenchido como "Não informado" se vazio)
                 dados.put("descricao", "Colonoscopia realizada com sucesso. Mucosa intestinal preservada, sem sinais de lesões ou alterações patológicas.");
                 dados.put("endoscopista", medicoResponsavel.getNome());
                 dados.put("preparoIntestinal", "Adequado - preparo com polietilenoglicol");
                 
             } else if (proximo.getExameTipo() instanceof ExameEndoscopiaDigestivaAlta) {
                 // Campos obrigatórios validados: descricao, endoscopista
-                // Campos opcionais validados: sedacao (será preenchido como "Não informada" se vazio)
                 dados.put("descricao", "Endoscopia digestiva alta sem alterações. Esôfago, estômago e duodeno com mucosa normal.");
                 dados.put("endoscopista", medicoResponsavel.getNome());
                 dados.put("sedacao", "Sedação leve com propofol");
@@ -98,13 +128,13 @@ public class Main {
                 dados.put("creatinina", "0.9");    // Valor normal
                 dados.put("glicose", "85.0");      // Valor normal
                 
-            } else if (proximo.getExameTipo() instanceof org.example.entities.exame.ExameRaioX) {
+            } else if (proximo.getExameTipo() instanceof ExameRaioX) {
                 // Campos obrigatórios validados: descricao, radiologistaAss, imagens (Base64)
                 dados.put("descricao", "Radiografia de tórax PA e perfil. Campos pulmonares limpos, coração de tamanho normal.");
                 dados.put("radiologistaAss", medicoResponsavel.getNome());
-                dados.put("imagens", "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAAA..."); // Base64 simulado
+                dados.put("imagens", "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEAAA...");
                 
-            } else if (proximo.getExameTipo() instanceof org.example.entities.exame.ExameRessonanciaMagnetica) {
+            } else if (proximo.getExameTipo() instanceof ExameRessonanciaMagnetica) {
                 // Campos obrigatórios validados: descricao, radiologistaAss, protocolo
                 // Campos condicionais validados: contraste, dosagemContraste (obrigatória se contraste usado)
                 dados.put("descricao", "Ressonância magnética do crânio. Estruturas encefálicas preservadas, sem sinais de lesões.");
@@ -114,15 +144,14 @@ public class Main {
                 dados.put("dosagemContraste", "0.1 mmol/kg");
             }
 
-            System.out.println("----------------- Dados do exame preenchidos -----------------" + " " + i);
-            System.out.println(dados.toString());
+            System.out.println("----------------- Dados do exame preenchidos -----------------");
+            System.out.println(dados);
 
-            // Criar o laudo antes de emitir
             LaudoPdf laudoPdf = new LaudoPdf();
             
-            // Emitir laudo com notificação automática (inclui anexo)
+            // Emitir laudo com notificação automática
             lab.emitirLaudoComNotificacao(proximo, dados, laudoPdf);
-            System.out.println("----------------- Laudo emitido e enviado por email com anexo -----------------" + " " + i);
+            System.out.println("----------------- Laudo emitido e enviado por email com anexo -----------------");
         }
     }
 }
